MDEV-39304 QB_Name hint with path is silently ignored inside view definition

This commit adds an explicit warning message indicating
that QB_NAME hints with path are not supported inside view definitions